indicator-kdeconnect (0.7) precise; urgency=low
  * Fix bug #46 - Nautilus freeze on copy/paste - URGENT

  * New UI for kdeconnect-send (move controls to header bar)
    and a button to reload devices

  * Add kdeconnect-send to Thunar 'send to' context menu

  * File manager extensions now is translated

  * Add Languages: French, Spanish, Catalan, Italian

  * Kdeconnect-send script for file manger not supported
    by extension can send multiple files

  * Provide OpenSuse repo

  -- Bajoja <steevenlopes@outlook.com> Thu, 23 Mar 2017 23:00 -0000

indicator-kdeconnect (0.6) precise; urgency=low
  * Monochrome icons for Gnome
  
  * Add German, Dutch, Czech, Croatian and Hungarian Language
  
  * KDEConnect-send and Elementary OS can send multiple files
  
  * Now you can Send SMS as a Beta Feature

 -- Bajoja <steevenlopes@outlook.com> Thu, 26 Jan 2017 02:00 -0000

indicator-kdeconnect (0.5) precise; urgency=low
  * Bugs Fixes

  * Add Brazilian Portuguese Language

  * Add icons for Elementary OS

  * Trusted devices now appear on context menu extension to send files directly

 -- Bajoja <steevenlopes@outlook.com> Tue, 03 Jan 2017 18:00 -0000

indicator-kdeconnect (0.4) precise; urgency=low
  * New native extension for Nautilus, Caja and Nemo

  * Now Indicator-kdeconnect provide translations

  * Add Portuguese Portugal and Russian Language

  * Provide CMake uninstall process

 -- Bajoja <steevenlopes@outlook.com> Thu, 24 Nov 2016 17:00 -0000

indicator-kdeconnect (0.3) precise; urgency=low

  * Bug Fixes.

  * New default icons

  * New Icons for ubuntu based desktops.

  * New Images for First time wizard.

 -- Bajoja <steevenlopes@outlook.com> Mon, 15 Nov 2016 16:44 -0000
  
indicator-kdeconnect (0.2) precise; urgency=low

  * Bug Fixes.
 
  * Features:
    - Multiple files send from the indicator
    - Menu to ring and find your phone
    - Icons can low and higth color case device is paired or unpaired