@@ -11,7 +11,7 @@ set (LOCALEDIR ${CMAKE_INSTALL_PREFIX}/share/locale)
 set (PKGDATADIR "${DATADIR}/indicator-kdeconnect")
 set (RELEASE_NAME "beta")
 set (VERSION_INFO "Indicator for KDE Connect daemon")
-set (VERSION "0.6")
+set (VERSION "0.7")
 
 # set gettexttranslate
 set (GettextTranslate_GMO_BINARY TRUE)
