@@ -19,7 +19,7 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 Name:           indicator-kdeconnect
-Version:        0.6
+Version:        0.7
 Release:        0%{?dist}
 Summary:        App Indicator for KDE Connect
 Group:          Applications/System
@@ -106,12 +106,13 @@ popd
 %changelog
 * Thu Mar 23 2017 2300 Bajoja <steevenlopes@outlook.com> 0.7
 - Fix bug #46 - Nautilus freeze on copy/paste - URGENT
+- Fix Desktop Computers don't appear on kdeconnect-send context menu
 - New UI for kdeconnect-send (move controls to header bar)
   and a button to reload devices
 - Add kdeconnect-send to Thunar 'send to' context menu
 - File manager extensions now is translated
 - Add Languages: French, Spanish, Catalan, Italian
-- Kdeconnect-send script for file manger not supported
+- Kdeconnect-send script for file manager not supported
   by extension can send multiple files
 - Provide OpenSuse repo - Thanks to Raúl García
 
